--- a/index-1.html
+++ b/index-1.html
@@ -58,13 +58,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+            <h2>About me</h2>
+            <p class="lead">This is Zoey, and I LOVE board games. Be it strategy games or other type of games, they are all fun to me. Surely enough, I'd like to introduce some games here.</p>
             <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+              <li><b>Great Western Trail:</b> &nbsp;America in the 19th century: You are a rancher and repeatedly herd your cattle from Texas to Kansas City, where you send them off by train.</li>
+              <li><b>Get Off My Land:</b> &nbsp;Get Off My Land! is a game of rival farmers competing for limited space and resources.</li>
+              <li><b>Istanbul:</b> &nbsp;In Istanbul, you lead a group of one merchant and four assistants through 16 locations in the bazaar.</li>
             </ul>
           </div>
         </div>
